--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+build
+*.csv
+*.json
+todo
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
